# bouncer

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE-MIT  PRD.md  README.md  UBIQUITOUS_LANGUAGE.md  build.rs  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-pure-engine-on-hook-thread-channel-control.md  0002-defer-code-signing.md  0002-linux-suppression-by-evdev-grab-and-uinput-replay.md
packaging/linux/: 99-bouncer-uinput.rules  README.md
spike/hook_proof/: Cargo.toml
spike/hook_proof/src/: main.rs
src/: config.rs  lib.rs  main.rs  messages.rs  stats.rs  test_support.rs
src/core/: debouncer.rs  engine.rs  event.rs  hotkey.rs  mod.rs  mode.rs  panic.rs  test_util.rs  verdict.rs
src/platform/: autostart.rs  evdev_keycode.rs  linux.rs  mod.rs  single_instance.rs  watchdog.rs  windows.rs
src/ui/: app.rs  hotkey.rs  mod.rs  rebind.rs  settings.rs  tray.rs
tests/: keyboard_e2e.rs  mouse_e2e.rs
