# Crate name is `input-bouncer` because `bouncer` is taken on crates.io; the
# binary is still named `bouncer` (see [[bin]]), so `cargo install input-bouncer`
# yields a `bouncer` executable.
[package]
name = "input-bouncer"
version = "1.0.1"
edition = "2021"
rust-version = "1.92"
description = "Headless input debouncer for Windows & Linux — suppresses keyboard & mouse chatter"
license = "MIT"
repository = "https://github.com/EkinBarisC/bouncer"
keywords = ["debounce", "keyboard", "mouse", "chatter", "windows"]

# Library + thin binary: the library holds all logic so unit and integration
# tests exercise the real public API (see ADR-0001 and DESIGN.md §9). The lib is
# named `bouncer` so test/integration imports stay `use bouncer::…`.
[lib]
name = "bouncer"
path = "src/lib.rs"

[[bin]]
name = "bouncer"
path = "src/main.rs"

# Heavy/risky deps are introduced with the slice that needs them: `windows` at
# the keyboard backend (#7), egui at the UI (#10), proptest at the engine
# property test (#5).
[dependencies]
directories = "6.0.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[features]
# Opt-in: compiles the Windows test-only harness (`test_support`) and the
# SendInput-driven end-to-end test. Installs a global hook and synthesizes real
# input, so it is never on by default — run with `cargo test --features integration-test`.
integration-test = []

[dev-dependencies]
# Property-based testing for the engine's fail-open safety invariant (#5).
proptest = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[target."cfg(target_os = \"linux\")".dependencies]
# The Linux backend grabs real devices with EVIOCGRAB and replays through uinput;
# `libc` is only for the `poll(2)` over the grabbed fds (evdev has no sync
# multi-device wait of its own).
evdev = "0.13.2"
libc = "0.2"

[target."cfg(windows)".build-dependencies]
# Embeds assets/icon.ico into the exe so Explorer / taskbar / title bar show the
# app icon (see build.rs).
winresource = "0.1"

[target."cfg(windows)".dependencies]
# The tray + egui UI is Windows-only for v1 (the app is gated behind cfg(windows)),
# so its heavy GUI deps live here rather than in the cross-platform set.
eframe = "0.34.3"
tray-icon = "0.24.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_System_SystemInformation"] }
winreg = "0.56.0"
