# THROWAWAY SPIKE — issue #1. Not part of the bouncer crate; delete after validating.
# This is a separate Cargo project (the repo root is not a workspace), so the main
# build and CI never touch it.
[package]
name = "hook_proof"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }
